--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "jquery": "^3.7.1",
+    "pigeon-maps": "^0.21.3",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.13.0",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
